# sobitie

./: .bash_profile  .env-example  .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  Readme.md  create_dj_secret_key.py  docker-compose dp.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose_develop.yaml  docker-compose_local.yaml  manage.py  pyproject.toml  requirements.txt  run.sh  run_local.sh  what.txt
.github/workflows/: check_code_style.yml  deploy_flow.yml  deploy_prod.yml  deploy_stage-check.yml  deploy_stage.yml
drf_sobitie/: manage.py  vk_config.v2.json
drf_sobitie/api/: apps.py  mixins.py  serializers.py  urls.py  views.py
drf_sobitie/bot/: api_client.py  apps.py  fastapi_app.py
drf_sobitie/bot/convers_func/: about_us_conversation.py  contacts_conversation.py  event_conversation.py  interactive_conversation.py  main_conversation.py  people_conversation.py  quiz_conversation.py  quiz_converstation.py  support_conversation.py  what_we_do_conversation.py
drf_sobitie/bot/handlers/: about_us_handler.py  contacts_handler.py  event_handler.py  interactive_handler.py  main_handler.py  people_handler.py  quiz_handler.py  support_handler.py  what_we_do_handler.py
drf_sobitie/bot/keyboards/: about_us.py  event.py  interactive.py  main.py  quiz.py  support.py
drf_sobitie/bot/utilities/: __init__.py  common_utilities.py  stickerpack_utilities.py
drf_sobitie/conf/: asgi.py  scheduler.py  settings.py  urls.py  wsgi.py
drf_sobitie/drf_sobitie/: asgi.py  constants.py  scheduler.py  settings.py  urls.py  wsgi.py
drf_sobitie/event/: admin.py  apps.py  models.py  signals.py
drf_sobitie/event/migrations/: 0001_initial.py  0002_event_event_time_event_location.py  0003_quote_alter_event_name.py  0004_alter_event_options.py  0005_subscriber_alter_event_options.py
drf_sobitie/notifications/: apps.py  consumers.py  routing.py  views.py
drf_sobitie/quiz/: admin.py  apps.py  models.py
drf_sobitie/quiz/migrations/: 0001_initial.py  (+4 more)
drf_sobitie/sticker_pack/: admin.py  apps.py  models.py
drf_sobitie/vk_con/: vk_connect.py
drf_sobitie/vk_utils/: apps.py  scheduler.py  vk_connect.py
nginx/: nginx.conf  nginx_develop.conf  nginx_local.conf
src/: constants.py  fastapi_app.py  main.py
src/bot/: async_requests.py  services.py
src/bot/keyboards/: main.py  (+5 more)
src/core/: constants.py  logger.py  menu_constants.py  settings.py  states.py
(+26 files in other folders)
