[tool.poetry]
name = "sobitie"
version = "0.1.0"
description = "sobitie_bot"
authors = [
    "Владислав Бойко", "Никита Цыбин", "Андрей Укладчиков",
    "Екатерина Каричева", "Кирилл Резник",
    "Даниил Паутов <danpautoff@yandex.ru>", "внесите себя"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.1"
python-telegram-bot = "^20.1"
emoji = "^2.2.0"

djangorestframework = "^3.14.0"
requests = "^2.28.2"
pillow = "^9.4.0"
drf-extra-fields = "^3.4.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.isort]
line_length = 120
extend_skip_glob = ["*/migrations/*"]
src_paths = ["src", "drf_sobitie"]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
